RESOLVED FIXED310764
Guard against null dereference in MessageSender::sendMessage()
https://bugs.webkit.org/show_bug.cgi?id=310764
Summary Guard against null dereference in MessageSender::sendMessage()
Chris Dumez
Reported 2026-03-25 19:41:00 PDT
Guard against null dereference in MessageSender::sendMessage() and MessageSender::sendMessageWithAsyncReply() by null checking the connection in release builds.
Attachments
Chris Dumez
Comment 1 2026-03-25 19:46:15 PDT
EWS
Comment 2 2026-03-26 01:52:20 PDT
Committed 309971@main (f3460ec3053a): <https://commits.webkit.org/309971@main> Reviewed commits have been landed. Closing PR #61366 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-03-26 01:53:13 PDT
Note You need to log in before you can comment on or make changes to this bug.