Guard against null dereference in MessageSender::sendMessage() https://bugs.webkit.org/show_bug.cgi?id=310764

Reviewed by Kimmo Kinnunen.

Guard against null dereference (which is UB) in MessageSender::sendMessage()
and MessageSender::sendMessageWithAsyncReply() by null checking the
connection in release builds.

* Source/WebKit/Platform/IPC/MessageSender.cpp:
(IPC::MessageSender::sendMessage):
(IPC::MessageSender::sendMessageWithAsyncReply):

Canonical link: https://commits.webkit.org/309971@main