Source/WebKit/Platform/IPC/MessageSender.cpp
@@ -35,7 +35,8 @@ MessageSender::~MessageSender() = default;
 bool MessageSender::sendMessage(UniqueRef<Encoder>&& encoder, OptionSet<SendOption> sendOptions)
 {
     RefPtr connection = messageSenderConnection();
-    ASSERT(connection);
+    if (!connection) [[unlikely]]
+        return false;
     // FIXME: Propagate errors out.
     return connection->sendMessage(WTF::move(encoder), sendOptions) == Error::NoError;
 }
@@ -43,7 +44,12 @@ bool MessageSender::sendMessage(UniqueRef<Encoder>&& encoder, OptionSet<SendOpti
 bool MessageSender::sendMessageWithAsyncReply(UniqueRef<Encoder>&& encoder, AsyncReplyHandler replyHandler, OptionSet<SendOption> sendOptions)
 {
     RefPtr connection = messageSenderConnection();
-    ASSERT(connection);
+    if (!connection) [[unlikely]] {
+        RunLoop::mainSingleton().dispatch([completionHandler = WTF::move(replyHandler.completionHandler)]() mutable {
+            completionHandler(nullptr, nullptr);
+        });
+        return false;
+    }
     // FIXME: Propagate errors out.
     return connection->sendMessageWithAsyncReply(WTF::move(encoder), WTF::move(replyHandler), sendOptions) == Error::NoError;
 }
